--- a/smarthome_kvant/remote_control/templates/base.html
+++ b/smarthome_kvant/remote_control/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Smart Home</title>
+    <title>{{ title }}</title>
 </head>
 <body>
     <header class = "nav_bar" style = "height: 100px;">
