--- a/smarthome_kvant/remote_control/templates/index.html
+++ b/smarthome_kvant/remote_control/templates/index.html
@@ -9,8 +9,8 @@
     <button class = "add_led" style = "margin-left: 20px;"><a style="text-decoration: none; color: white" href = "{% url 'signup' %}">Регистрация</a></button>
     <button class = "add_led" style = "margin-left: 20px;"><a style="text-decoration: none; color: white" href = "{% url 'login' %}">Вход</a></button>
     {% if user.is_authenticated %}
-         <h2 style="text-align: right; margin-top: -40px; margin-right: 200px; color: white">{{ user.username }}</h2>
-         <h6 style="text-align: right; margin-top: -20px; margin-right: 140px"><a style="color: black;" href="{% url 'logout' %}">Выйти</a></h6>
+         <h2 style="text-align: right; margin-top: 20px; margin-right: 80px; color: black">{{ user.username }}</h2>
+         <h6 style="text-align: right; margin-top: -25px; margin-right: 20px"><a style="color: grey;" href="{% url 'logout' %}">Выйти</a></h6>
         {% else %}
     {% endif %}
     <img class = "image" src = "https://s.starladder.com/uploads/user_logo/e/2/f/e/f0d227746d98c02a794fcbf3b693cf8b.jpg">
@@ -25,9 +25,14 @@
             var element = document.getElementById('AddForm');
             element.style.top = '150px';
         }
+        function CloseAddForm(){
+            var element = document.getElementById('AddForm');
+            element.style.top = '-500px';
+        }
     </script>
     <form method = "post" id = "AddForm">
         {% csrf_token %}
+        <button style = "width: 60px; height: 60px; right: 20px; top: 20px; position: absolute; outline: none; border: none; cursor: pointer;" onclick = "CloseAddForm()"><img style = "width: 50px; height: 50px; position: absolute; right: 2.5px; top: 3px;" src = "https://w7.pngwing.com/pngs/66/748/png-transparent-hatstand-nonwoven-fabric-zero-waste-towel-red-cross-miscellaneous-angle-white.png"></button>
         <h2 class = "Instruction">Название для лампы</h2>
         <div class = "form-control" style = "border: none; height: 50px; margin-top: 20px;">
             {{ Form.add_name }}
