--- a/smarthome_kvant/remote_control/templates/base.html
+++ b/smarthome_kvant/remote_control/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Smart Home</title>
 </head>
-<body>
+<body class="body">
     <header class = "nav_bar" style = "height: 100px;">
         {% block header %}
         {% endblock %}
@@ -34,7 +34,7 @@
         .preloader li {
             width: 40px;
             height: 40px;
-            background: #337AB7;
+            background: #001930;
             border-radius: 4px;
             animation: preloader-scale 0.8s linear alternate infinite;
         }
