--- a/smarthome_kvant/remote_control/static/CSS/termometr_dark.css
+++ b/smarthome_kvant/remote_control/static/CSS/termometr_dark.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #333333;
 }
 
 .nav_bar{
@@ -9,7 +10,7 @@ body {
     top: 0;
     left: 0;
     line-height: 500%;
-    background-color: #2196F3;
+    background-color: #2b2b2b;
     font-size: 1em;
 }
 
