--- a/smarthome_kvant/remote_control/templates/index_dark.html
+++ b/smarthome_kvant/remote_control/templates/index_dark.html
@@ -9,7 +9,7 @@
     <button class = "add_led" style = "margin-left: 10px;"><a style="text-decoration: none; color: white" href = "{% url 'signup' %}">Регистрация</a></button>
     <button class = "add_led" style = "margin-left: 10px;"><a style="text-decoration: none; color: white" href = "{% url 'login' %}">Вход</a></button>
     {% if user.is_authenticated %}
-         <h2 style="text-align: right; margin-top: 20px; margin-right: 80px; color: black">{{ user.username }}</h2>
+         <h2 style="text-align: right; margin-top: 20px; margin-right: 80px; color: white">{{ user.username }}</h2>
          <h6 style="text-align: right; margin-top: -25px; margin-right: 20px"><a style="color: grey;" href="{% url 'logout' %}">Выйти</a></h6>
         {% else %}
     {% endif %}
@@ -17,6 +17,11 @@
 {% endblock %}
 
 {% block content %}
+    <style>
+        .btn:hover {
+            background-color: #3D3D3D;
+        }
+    </style>
     <script>
         if ( window.history.replaceState ) {
             window.history.replaceState( null, null, window.location.href );
@@ -32,16 +37,16 @@
             element.style.visibility = 'hidden';
         }
     </script>
-    <form method = "post" id = "AddForm">
+    <form method = "post" id = "AddForm" style="background-color: #2b2b2b;">
         {% csrf_token %}
-        <button style = "background-color: #002342; width: 60px; height: 60px; right: 20px; top: 20px; position: absolute; outline: none; border: none; cursor: pointer;" onclick = "CloseAddForm()">
-            <img style = "width: 50px; height: 50px; position: absolute; right: 2.5px; top: 3px; background-color: #002342;" src="https://cdn3.iconfinder.com/data/icons/unicons-vector-icons-pack/32/cross-512.png">
+        <button style = "background-color: #2b2b2b; width: 60px; height: 60px; right: 20px; top: 20px; position: absolute; outline: none; border: none; cursor: pointer;" onclick = "CloseAddForm()">
+            <img style = "width: 50px; height: 50px; position: absolute; right: 2.5px; top: 3px; background-color: #2b2b2b;" src="https://cdn3.iconfinder.com/data/icons/unicons-vector-icons-pack/32/cross-512.png">
         </button>
         <h2 class = "Instruction">Название для лампы</h2>
-        <div class = "form-control" style = "border: none; height: 50px; margin-top: 20px; background-color: #002342;">
+        <div class = "form-control" style = "border: none; height: 50px; margin-top: 20px; background-color: #2b2b2b;">
             {{ Form.add_name }}
         </div>
-        <button class = "btn" name="Add" type="Submit" style = "background-color: #1976D2; border-radius: 30px;color: white;font-size: 30px;">Добавить лампу</button>
+        <button class="btn" name="Add" type="Submit" style = "background-color: #2b2b2b; border-radius: 30px; color: white;font-size: 30px;">Добавить лампу</button>
     </form>
     <div class="container">
         <div class = "row" style = "margin-top: 250px; text-align: center;">
