--- a/smarthome_kvant/remote_control/templates/signup.html
+++ b/smarthome_kvant/remote_control/templates/signup.html
@@ -1,9 +1,17 @@
-{% extends 'index.html' %}
+{% extends 'index_dark.html' %}
 
 {% block content %}
 <br><br><br><br>
 <h2>Регистрация</h2>
 <br>
+<style>
+  * {
+    color: white;
+  }
+  input {
+    color: black;
+  }
+</style>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
